tree-sitter-twe/test/corpus/basic.txt
==================
empty program
==================

---

(source_file)

==================
hello
==================

print("hello, twe")

---

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      (string_literal))))

==================
let int
==================

let x = 42

---

(source_file
  (let_statement
    name: (identifier)
    value: (integer_literal)))

==================
arithmetic precedence
==================

print(1 + 2 * 3)

---

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      (binary_expression
        left: (integer_literal)
        right: (binary_expression
          left: (integer_literal)
          right: (integer_literal))))))

==================
booleans
==================

let t = true
let f = false

---

(source_file
  (let_statement
    name: (identifier)
    value: (boolean_literal))
  (let_statement
    name: (identifier)
    value: (boolean_literal)))

==================
field access
==================

print(p.x)

---

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      (field_expression
        object: (identifier)
        name: (identifier)))))

==================
keyword argument
==================

rect(at: pos, color: red)

---

(source_file
  (expression_statement
    (call_expression
      function: (identifier)
      (keyword_argument
        name: (identifier)
        value: (identifier))
      (keyword_argument
        name: (identifier)
        value: (identifier)))))

==================
list literal
==================

let xs = [1, 2, 3]

---

(source_file
  (let_statement
    name: (identifier)
    value: (list
      (integer_literal)
      (integer_literal)
      (integer_literal))))

==================
tuple literal
==================

let p = (3, 4)

---

(source_file
  (let_statement
    name: (identifier)
    value: (tuple
      (integer_literal)
      (integer_literal))))

==================
quantity literal
==================

let dt = 100ms

---

(source_file
  (let_statement
    name: (identifier)
    value: (quantity_literal)))

==================
percent literal
==================

let crit = 25%

---

(source_file
  (let_statement
    name: (identifier)
    value: (percent_literal)))

==================
compound assignment
==================

n += 1

---

(source_file
  (assignment_statement
    target: (identifier)
    value: (integer_literal)))

==================
field assignment via self
==================

self.value = 5

---

(source_file
  (assignment_statement
    target: (field_expression
      object: (self_expression)
      name: (identifier))
    value: (integer_literal)))

==================
not in operator
==================

let absent = 99 not in xs

---

(source_file
  (let_statement
    name: (identifier)
    value: (binary_expression
      left: (integer_literal)
      right: (identifier))))

==================
return with value
==================

return 5

---

(source_file
  (return_statement
    value: (integer_literal)))

==================
break and continue
==================

break
continue

---

(source_file
  (break_statement)
  (continue_statement))
